@@ -211,11 +211,10 @@ def covariance_matrix(ensemble,
 
     # Extract coordinates from reference structure, if specified
     reference_coordinates = None
-    if reference:
+    if reference is not None:
         # Select the same atoms in reference structure
-        reference_atom_selection = reference.select_atoms(
-            ensemble.get_atom_selection_string())
-        reference_coordinates = reference_atom_selection.atoms.coordinates()
+        reference_atom_selection = reference.select_atoms(select)
+        reference_coordinates = reference_atom_selection.atoms.positions
 
         # Flatten reference coordinates
         reference_coordinates = reference_coordinates.flatten()
